# ghostshell

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
examples/claude/: config.json
examples/cursor/: mcp.json
examples/local/: config.json
server/: __init__.py  config.py  main.py
server/tools/: __init__.py  analytics.py  experiments.py  ideation.py  personas.py  population.py  runs.py
server/tools/_core/: __init__.py  base.py  exceptions.py  handlers.py  retry.py
server/utils/: __init__.py  api_client.py
tests/: __init__.py  conftest.py  test_exceptions.py  test_handlers.py  test_integration.py  test_retry.py  test_tools.py
